--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parallax</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,7 +22,7 @@
         starts with IT Framework for beginners and continues with Front-end and
         Back-end developer course modules. A <b>full-stack web developer</b> is
         a programmer who has the basic knowledge for all layers of an
-        application. Each layer is called a "stack". Full stack web developers
+        application. Each layer is called a “stack”. Full stack web developers
         have the ability to design complete
         <b
           >web applications and websites which requires both front-end and
@@ -33,7 +33,7 @@
       </p>
     </section>
     <div class="image2 parallax">
-      <img src="./img/clarusway.png" alt="" />
+      <img src="./img/clarusway.png" alt="" id="resim" />
     </div>
     <section class="dark">
       <h3>AWS Solution Architect & DevOps</h3>
@@ -84,10 +84,10 @@
         cutting-edge programs used today by leading corporations.
       </p>
     </section>
-     <div class="image5 parallax">
+    <div class="image5 parallax">
       <div class="heading-container">
         <h1 class="clarusway1">CHOOSE YOUR FUTURE</h1>
       </div>
     </div>
   </body>
-</html> 
+</html>
